feat(*): add inforefiner maven repository

--- a/pom.xml
+++ b/pom.xml
@@ -2143,4 +2143,12 @@ under the License.
 		</pluginManagement>
 	</build>
 
+	<distributionManagement>
+		<repository>
+			<id>inforefiner-release</id>
+			<name>Inforefiner Porject Release</name>
+			<url>http://192.168.1.171:8081/nexus/content/repositories/releases/</url>
+		</repository>
+	</distributionManagement>
+
 </project>
